# log_listener_proxy

./: README.md  pyproject.toml
examples/: client_reader.py  pyspark_writer.py
log_listener_proxy/: __init__.py  server.py
tests/: test_integration.py
